--- a/Models/_Full/2024.06.15_How_Should_We_Extract_Discrete_Audio_Tokens_from_Self-Supervised_Models.md
+++ b/Models/_Full/2024.06.15_How_Should_We_Extract_Discrete_Audio_Tokens_from_Self-Supervised_Models.md
@@ -54,39 +54,39 @@ Furthermore, an attention mechanism is employed to identify task-specific influe
 ## 1.Introduction: 引言
 
 Learning effective, efficient, and robust representations is a core problem in modern audio and speech processing systems.
-Over the past few years, continuous representations learned by large self-supervised models such as [Wav2Vec2](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md), [WavLM](../Speech_Representaion/2021.10.26_WavLM.md), and [HuBERT](../Speech_Representaion/2021.06.14_HuBERT.md) have achieved unprecedented performance.
+Over the past few years, continuous representations learned by large self-supervised models such as [Wav2Vec2](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md), [WavLM](../SpeechRepresentation/2021.10.26_WavLM.md), and [HuBERT](../SpeechRepresentation/2021.06.14_HuBERT.md) have achieved unprecedented performance.
 A recent research trend consists of learning discrete audio representations instead of continuous ones, resulting in what is known as audio tokens.
 These discrete tokens offer several potential advantages.
-Firstly, they facilitate the development of audio language models (LMs) ([AudioLM](../Speech_LLM/2022.09.07_AudioLM.md); [AudioPaLM](../Speech_LLM/2023.06.22_AudioPaLM.md); [LauraGPT](../Speech_LLM/2023.10.07_LauraGPT.md); [VioLA](../Speech_LLM/2023.05.25_VioLA.md); [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md); [SpeechX](../Speech_LLM/2023.08.14_SpeechX.md)) and the creation of multi-modal large language models ([Gemini](../TextLM/2023.12.19_Gemini.md)), which can emit audio, text, and visual tokens.
+Firstly, they facilitate the development of audio language models (LMs) ([AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [AudioPaLM](../SpeechLM/2023.06.22_AudioPaLM.md); [LauraGPT](../SpeechLM/2023.10.07_LauraGPT.md); [VioLA](../SpeechLM/2023.05.25_VioLA.md [VALL-E](../SpeechLM/2023.01.05_VALL-E.md); [SpeechX](../SpeechLM/2023.08.14_SpeechX.md)) and the creation of multi-modal large language models ([Gemini](../TextLM/2023.12.19_Gemini.md)), which can emit audio, text, and visual tokens.
 Additionally, their compression potential can contribute to efficient data transmission and storage.
 Discrete tokens also enable us to address audio generation tasks such as speech enhancement and synthesis using classification methods, instead of relying on complex high-dimensional regression models.
 
-Following the terminology from ([AudioLM](../Speech_LLM/2022.09.07_AudioLM.md); [SpeechTokenizer](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md)), audio tokenization techniques can be broadly categorized into Compression-based (codecs) tokens and Semantic tokens.
-Compression-based tokens ([SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md); defossez2022high, kumar2024high, [HiFi-Codec](../Speech_Neural_Codec/2023.05.04_HiFi-Codec.md)) utilize encoder-decoder architectures coupled with [Residual Vector Quantization (RVQ)](../Speech_Neural_Codec/2021.07.07_SoundStream.md).
+Following the terminology from ([AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md)), audio tokenization techniques can be broadly categorized into Compression-based (codecs) tokens and Semantic tokens.
+Compression-based tokens ([SoundStream](../SpeechCodec/2021.07.07_SoundStream.md); defossez2022high, kumar2024high, [HiFi-Codec](../SpeechCodec/2023.05.04_HiFi-Codec.md)) utilize encoder-decoder architectures coupled with [Residual Vector Quantization (RVQ)](../SpeechCodec/2021.07.07_SoundStream.md).
 They are explicitly trained to accurately reconstruct the original audio, making them particularly suitable for audio generation tasks.
-Semantic tokens ([Speech Resynthesis](../_Full/Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md); [Phonetic Analysis](../_Full/Phonetic_Analysis_of_Self-Supervised_Representations_of_English_Speech.md); [W2V-BERT](../Speech_Representaion/2021.08.07_W2V-BERT.md)), on the other hand, are generated through clustering or quantization of the layers of Self-Supervised Learning (SSL) models ([Wav2Vec2](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md); [WavLM](../Speech_Representaion/2021.10.26_WavLM.md); [HuBERT](../Speech_Representaion/2021.06.14_HuBERT.md)).
+Semantic tokens ([Speech Resynthesis](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md); [Phonetic Analysis](Phonetic_Analysis_of_Self-Supervised_Representations_of_English_Speech.md); [W2V-BERT](../SpeechRepresentation/2021.08.07_W2V-BERT.md)), on the other hand, are generated through clustering or quantization of the layers of Self-Supervised Learning (SSL) models ([Wav2Vec2](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [WavLM](../SpeechRepresentation/2021.10.26_WavLM.md); [HuBERT](../SpeechRepresentation/2021.06.14_HuBERT.md)).
 Often, this involves selecting a layer from the pretrained SSL model and clustering its representations, typically with the k-means algorithm.
 Semantic tokens primarily capture coarse information such as phonetic, semantics, and syntactic details.
 Since they are not explicitly trained to achieve accurate waveform reconstruction, it is more natural to use them in discriminative tasks like Automatic Speech Recognition (ASR).
-Recent research, however, has shown that semantic tokens can be effective for generative tasks as well ([SELM](../_tmp/SELM.md); [Towards Universal Speech Discrete Tokens](../_Full/Towards_Universal_Speech_Discrete_Tokens__A_Case_Study_for_ASR_&_TTS.md)).
-Additionally, semantic tokens have been used in a hybrid tokenizer ([SpeechTokenizer](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md); [FunCodec](../Speech_Neural_Codec/2023.09.14_FunCodec.md)).
+Recent research, however, has shown that semantic tokens can be effective for generative tasks as well ([SELM](../_tmp/SELM.md); [Towards Universal Speech Discrete Tokens](Towards_Universal_Speech_Discrete_Tokens__A_Case_Study_for_ASR_&_TTS.md)).
+Additionally, semantic tokens have been used in a hybrid tokenizer ([SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md); [FunCodec](../SpeechCodec/2023.09.14_FunCodec.md)).
 This hybrid approach combines semantic and compression-based tokens, separating content information in the initial layer while preserving paralinguistic details in subsequent layers.
-A similar strategy has been widely adopted in audio LLMs ([AudioLM](../Speech_LLM/2022.09.07_AudioLM.md); [AudioPaLM](../Speech_LLM/2023.06.22_AudioPaLM.md); [LauraGPT](../Speech_LLM/2023.10.07_LauraGPT.md)).
+A similar strategy has been widely adopted in audio LLMs ([AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [AudioPaLM](../SpeechLM/2023.06.22_AudioPaLM.md); [LauraGPT](../SpeechLM/2023.10.07_LauraGPT.md)).
 Nevertheless, the most effective setting for extracting semantic tokens remains largely unclear.
-Recent studies have primarily focused on ASR and Speech Translation ([Chang2023Exploring](2023.09.27_Exploring_Speech_Recognition_Translation_&_Understanding_with_Discrete_Speech_Units__A_Comparative_Study.md); [DUB](../_tmp/DUB.md); [Chang2023Exploration](../_Full/Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)), without considering a broader range of discriminative and generative tasks.
+Recent studies have primarily focused on ASR and Speech Translation ([Chang2023Exploring](2023.09.27_Exploring_Speech_Recognition_Translation_&_Understanding_with_Discrete_Speech_Units__A_Comparative_Study.md); [DUB](../_tmp/DUB.md); [Chang2023Exploration](Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)), without considering a broader range of discriminative and generative tasks.
 
 This paper addresses this gap by evaluating the effects of different heuristics required to derive semantic tokens for several discriminative and generative tasks, such as speech recognition, speaker recognition, emotion classification, speech enhancement, and text-to-speech.
 We investigate various crucial aspects, including the impact of the number of clusters and the selection of the intermediate layer of the SSL model to discretize.
 The latter factor turned out to be crucial and task-dependent, as early layers capture low-level information and higher layers encode content and semantic nuances.
-Common strategies include using the middle layer ([SELM](../_tmp/SELM.md); [Speech Resynthesis](../_Full/Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)) or leveraging the last layer ([Chang2023Exploration](../_Full/Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)).
+Common strategies include using the middle layer ([SELM](../_tmp/SELM.md); [Speech Resynthesis](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)) or leveraging the last layer ([Chang2023Exploration](Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)).
 Instead of relying on partial information only, we introduced a novel technique based on an informed layer selection mechanism.
 We propose to cluster all layers and inject their information into the acoustic models using learnable attention weights.
 This approach significantly boosts performance while also providing valuable insights into the importance of each layer.
 
-Since there is no built-in decoder in semantic tokens, a vocoder model for converting the semantic tokens into audio must be trained ([HiFi-GAN](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md), [WaveGlow](../TTS3_Vocoder/2018.10.31_WaveGlow.md)).
+Since there is no built-in decoder in semantic tokens, a vocoder model for converting the semantic tokens into audio must be trained ([HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md), [WaveGlow](../Vocoder/2018.10.31_WaveGlow.md)).
 Training such a vocoder is computationally demanding, making it highly impractical to train a separate vocoder for each layer or combination of layers.
 To address this challenge, we propose a novel scalable vocoder capable of operating with various layer combinations at no additional cost.
-This is achieved through a layer dropout training scheme, inspired by the bitrate scalability mechanism used in [SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md).
+This is achieved through a layer dropout training scheme, inspired by the bitrate scalability mechanism used in [SoundStream](../SpeechCodec/2021.07.07_SoundStream.md).
 Interestingly, our results show that the scalable vocoder outperforms all vocoders trained on every specific layer.
 Finally, for a comprehensive comparison, we provide experimental evidence using both in-domain and out-of-domain datasets for training k-means.
 For reproducibility and to encourage further research, we release the code, built on the popular [SpeechBrain](../_tmp/SpeechBrain.md) toolkit, and pretrained models publicly at https://github.com/speechbrain/benchmarks/tree/DASB.
@@ -118,7 +118,7 @@ Figure.01: The proposed method for audio token extraction from SSL models:
 For quantization, we cluster five layers taken from two pretrained SSL models using the k-means algorithm independently for each layer.
 We consider two widely-used models: WavLM-large ([Checkpoints](https://huggingface.co/microsoft/wavlm-large)) and HuBERT-large ([Checkpoints](https://huggingface.co/facebook/hubert-large-ll60k)), both having 24 layers.
 We choose two layers from the lower part (3, 7) to capture fine-grained information, the middle layer (12), and two layers from the higher part (18, 23) for encoding content and meaning.
-This selection is based on observation from prior research ([WavLM](../Speech_Representaion/2021.10.26_WavLM.md); [SUPERB](../../Evaluations/2021.05.03_SUPERB.md)) which studied the contribution patterns of different layers across various tasks.
+This selection is based on observation from prior research ([WavLM](../SpeechRepresentation/2021.10.26_WavLM.md); [SUPERB](../../Evaluations/2021.05.03_SUPERB.md)) which studied the contribution patterns of different layers across various tasks.
 As a result, this set of discrete hierarchical tokens captures rich information from the original audio signal.
 Each of the K clusters is assigned a unique index.
 Additionally, we store the continuous coordinates of each centroid for studying the effect of initializing input embeddings in downstream acoustic models.
@@ -126,9 +126,9 @@ The outcome of this tokenization process is a tensor $\mathbf{d}$ of shape $B \t
 
 ### 3.2.Informed Layer Selector
 
-As evident from the SSL literature ([Zaiem2023Speech](../_Full/Speech_Self-Supervised_Representations_Benchmarking__Are_We_Doing_it_Right?.md); [SUPERB](../../Evaluations/2021.05.03_SUPERB.md); [Zaiem2023FineTuning](Fine-Tuning_Strategies_for_Faster_Inference_Using_Speech_Self-Supervised_Models__A_Comparative_Study.md)), the choice of the layer within the SSL model significantly influences the performance of the downstream task of interest.
+As evident from the SSL literature ([Zaiem2023Speech](Speech_Self-Supervised_Representations_Benchmarking__Are_We_Doing_it_Right?.md); [SUPERB](../../Evaluations/2021.05.03_SUPERB.md); [Zaiem2023FineTuning](Fine-Tuning_Strategies_for_Faster_Inference_Using_Speech_Self-Supervised_Models__A_Comparative_Study.md)), the choice of the layer within the SSL model significantly influences the performance of the downstream task of interest.
 This decision is equally critical for semantic tokens.
-Unlike prior methods that rely on heuristic layer selection ([SELM](../_tmp/SELM.md); [Speech Resynthesis](../_Full/Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md); [Chang2023Exploration](../_Full/Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)), we integrate the information from our hierarchical multi-layer audio tokens with an attention mechanism.
+Unlike prior methods that rely on heuristic layer selection ([SELM](../_tmp/SELM.md); [Speech Resynthesis](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md); [Chang2023Exploration](Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)), we integrate the information from our hierarchical multi-layer audio tokens with an attention mechanism.
 The attention mechanisms comprise a straightforward multi-layer perceptron (MLP) fed by the embeddings of the audio tokens from each layer.
 The MLP generates a score for each selected layer, that is normalized by a softmax function as shown in the following equations:
 
@@ -155,7 +155,7 @@ Lastly, the informed layer selections enhance interpretability, enabling us to a
 
 The mixed representations are fed to a neural model trained to address various downstream tasks.
 We train the attention mechanism, embeddings, and the acoustic models jointly.
-While previous studies ([Chang2023Exploring](2023.09.27_Exploring_Speech_Recognition_Translation_&_Understanding_with_Discrete_Speech_Units__A_Comparative_Study.md), [DUB](../_tmp/DUB.md), [Chang2023Exploration](../_Full/Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)) have primarily focused on a few discriminative tasks, we aim to provide evidence across a diverse range of speech applications, considering both discriminative and generative tasks.
+While previous studies ([Chang2023Exploring](2023.09.27_Exploring_Speech_Recognition_Translation_&_Understanding_with_Discrete_Speech_Units__A_Comparative_Study.md), [DUB](../_tmp/DUB.md), [Chang2023Exploration](Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)) have primarily focused on a few discriminative tasks, we aim to provide evidence across a diverse range of speech applications, considering both discriminative and generative tasks.
 We consider ASR, speaker identification, and emotion recognition as discriminative tasks.
 For generative tasks, we focus on text-to-speech and speech enhancement.
 The details for each task are reported in [Experiments](#4experiments-实验).
@@ -166,7 +166,7 @@ Although SSL models such as Wav2vec2, HuBERT, and WavLM are not designed for acc
 The dominant approach involves training a separate vocoder for each possible layer combination.
 However, this approach is impractical and computationally demanding since each downstream task may require a different set of layers.
 In this work, we propose a universal and scalable vocoder capable of accommodating various layer combinations.
-To train such a model, we modify [HiFi-GAN](../Speech_Neural_Codec/2023.05.04_HiFi-Codec.md) to accept a variable number of multi-layer discrete tokens as input.
+To train such a model, we modify [HiFi-GAN](../SpeechCodec/2023.05.04_HiFi-Codec.md) to accept a variable number of multi-layer discrete tokens as input.
 We introduce a layer dropout mechanism, similar to structured [dropout](../_Basis/Dropout.md).
 For each input example, we randomly sample $k$ layers from the range $[1, n_l]$, as shown in the following equations:
 
@@ -183,8 +183,8 @@ In addition to its flexibility, this vocoder has demonstrated superior performan
 ## 4.Experiments: 实验
 
 The tasks in our experiments are divided into two groups: Discriminative tasks involving transcription and classification, and generative tasks producing audio.
-For the downstream architecture choices and training procedures, we follow the best-performing approaches for classic continuous self-supervised representations ([Zaiem2023Speech](../_Full/Speech_Self-Supervised_Representations_Benchmarking__Are_We_Doing_it_Right?.md)).
-We employ 1000 centroids across all tasks, except for ASR and emotion recognition, where we adopt 2000 centroids based on insights from prior research on ASR with discrete representations ([Chang2023Exploration](../_Full/Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)).
+For the downstream architecture choices and training procedures, we follow the best-performing approaches for classic continuous self-supervised representations ([Zaiem2023Speech](Speech_Self-Supervised_Representations_Benchmarking__Are_We_Doing_it_Right?.md)).
+We employ 1000 centroids across all tasks, except for ASR and emotion recognition, where we adopt 2000 centroids based on insights from prior research on ASR with discrete representations ([Chang2023Exploration](Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)).
 The effect of this selection is probed in [Effect of Number of Clusters](#53effect-of-number-of-clusters).
 
 ### 4.1.Discriminative Tasks
@@ -219,9 +219,9 @@ Training is conducted end-to-end using cross-entropy loss.
 Noisy samples are generated by mixing clean samples from [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md) with noise from [WHAM!](../_tmp/WHAM!.md).
 The signal-to-noise ratios (SNRs) are uniformly distributed between 0 and 5 dB.
 Due to the misalignment of the vocoder's output with the target at the sample level, metrics like Si-SNR can be degraded.
-Therefore, we use the [deep noise suppression mean opinion score (DNSMOS)](../../Evaluations/DNSMOS.md) for the speech quality metric, following a previous study ([SELM](../_tmp/SELM.md)).
+Therefore, we use the [deep noise suppression mean opinion score (DNSMOS)](../../Evaluations/2020.10.28_DNSMOS.md) for the speech quality metric, following a previous study ([SELM](../_tmp/SELM.md)).
 Intelligibility is evaluated through the [differential word error rate (dWER)](../../Evaluations/dWER.md), which measures the WER between the transcribed enhanced signal and the transcribed target signal.
-Transcriptions are obtained using the small version of [Whisper](../Speech_LLM/2022.12.06_Whisper.md).
+Transcriptions are obtained using the small version of [Whisper](../SpeechLM/2022.12.06_Whisper.md).
 
 #### Text-to-Speech (TTS)
 
@@ -230,8 +230,8 @@ To facilitate convergence, we employ [guided attention](../_tmp/Guided_Attention
 The model takes text embeddings as its input and generates the audio tokens for each considered layer.
 We utilize a shared transformer decoder, where each tokenizer head has its own learned embedding, and there is a distinct final linear layer for each token.
 We train all models on the [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md) dataset.
-For assessing speech quality, we use [UTMOS](../../Evaluations/UTMOS.md) to estimate human quality ratings.
-To evaluate fidelity to the text, we assess generated samples using the WER computed with the small version of [Whisper](../Speech_LLM/2022.12.06_Whisper.md).
+For assessing speech quality, we use [UTMOS](../../Evaluations/2022.04.05_UTMOS.md) to estimate human quality ratings.
+To evaluate fidelity to the text, we assess generated samples using the WER computed with the small version of [Whisper](../SpeechLM/2022.12.06_Whisper.md).
 
 ## 5.Results: 结果
 
@@ -255,7 +255,7 @@ As shown in Table.02 (last column), we do not observe any significant performanc
 Figure.03 depicts the average weights assigned to different layers in the WavLM model across various downstream tasks on the test dataset. In both TTS and the scalable vocoder, lower levels get greater importance as they prioritize effective reconstruction.
 Conversely, for ASR, the upper layers become more crucial in capturing the semantic aspects of spoken utterances.
 In the case of ER and SID, the third layer receives the highest weight.
-Our findings align with the observed pattern in continuous representations (["Speech Self-Supervised Representations Benchmarking"](../_Full/2023.08.28_Speech_Self-Supervised_Representations_Benchmarking__A_Case_for_Larger_Probing_Heads.md)).
+Our findings align with the observed pattern in continuous representations (["Speech Self-Supervised Representations Benchmarking"](2023.08.28_Speech_Self-Supervised_Representations_Benchmarking__A_Case_for_Larger_Probing_Heads.md)).
 For SE, all layers are equally weighted, indicating the necessity of all hierarchical levels to achieve optimal audio quality while preserving the semantic content of the input.
 
 ### 5.3.Effect of Number of Clusters
