--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -85,7 +85,7 @@ Despite these advancements, significant challenges persist.
 GAN-based vocoders are effective for generating high-resolution audio but still struggle with capturing long-term dependencies, which can lead to quality degradation.
 Diffusion models have improved stability but remain computationally expensive and unsuitable for real-time applications due to their sequential nature.
 
-To address these challenges, we propose a novel GAN-based vocoder called ***RingFormer*** that incorporates convolution-augmented Transformers, known as [Conformer [17]](../ASR/2020.05.16_Conformer.md), and an efficient [ring attention [18]](../../Modules/Attention/RingAttention.md) mechanism introduced in previous research.
+To address these challenges, we propose a novel GAN-based vocoder called ***RingFormer*** that incorporates convolution-augmented Transformers, known as [Conformer [17]](../ASR/2020.05.16_Conformer.md), and an efficient [ring attention [18]](../../Modules/Attention/2023.10.03_RingAttention.md) mechanism introduced in previous research.
 While GANs offer the speed and high resolution necessary for real-time synthesis, ***RingFormer*** leverages the Conformer architecture to better capture both local details and global dependencies, addressing key weaknesses of traditional GAN-based models.
 Furthermore, ring attention enhances computational efficiency by focusing attention on localized regions while maintaining the ability to model long-range dependencies.
 This hybrid architecture, ***RingFormer***, balances the tradeoffs between speed and resolution, achieving the temporal resolution and efficiency needed for real-time speech synthesis while maintaining the high-quality audio output expected from modern TTS systems.
@@ -127,7 +127,7 @@ Section III describes the proposed model architecture, Section IV explains the l
 - 基于 GAN 的声码器在生成高分辨率音频上有效但仍难以捕捉长期依赖, 导致质量下降.
 - 扩散模型提升了稳定性但计算代价高昂且不适用于实时应用, 因为其内在的序列性.
 
-为了解决这些问题, 我们提出了一种新的基于 GAN 的声码器 ***RingFormer*** 融合了卷积增强的 Transformer ([Conformer [17]](../ASR/2020.05.16_Conformer.md)), 和一种高效的环注意力机制 ([Ring Attention [18]](../../Modules/Attention/RingAttention.md)).
+为了解决这些问题, 我们提出了一种新的基于 GAN 的声码器 ***RingFormer*** 融合了卷积增强的 Transformer ([Conformer [17]](../ASR/2020.05.16_Conformer.md)), 和一种高效的环注意力机制 ([Ring Attention [18]](../../Modules/Attention/2023.10.03_RingAttention.md)).
 - GAN 提供实时合成所需的速度和高分辨率, 而 ***RingFormer*** 则利用 Conformer 架构更好地捕捉局部细节和全局依赖, 克服了传统基于 GAN 模型的关键弱点.
 - 此外, 环注意力增强计算效率, 通过将注意力集中在局部区域的同时保持对全局依赖的建模能力.
 
@@ -219,7 +219,7 @@ Recognizing that capturing long-term dependencies is crucial for modeling realis
 The proposed architecture, as shown in Figure 2, incorporates two stages of Conformer blocks with ring attention and ×4 upsampling between the input and output convolutions.
 This approach contrasts with the upsampling process in HiFi-GAN, which uses the multi-receptive field fusion (MRF) technique with [×8, ×8, ×2, ×2] transpose convolutions to perform upsampling and reconstruct raw audio.
 In comparison, our proposed structure simplifies the upsampling process by using two stages of Conformer blocks with ring attention and ×4 upsampling, providing a more efficient and streamlined approach to generating high-quality audio.
-The remaining Conformer blocks, excluding the ring attention, are identical to those in [Ring Attention [18]](../../Modules/Attention/RingAttention.md).
+The remaining Conformer blocks, excluding the ring attention, are identical to those in [Ring Attention [18]](../../Modules/Attention/2023.10.03_RingAttention.md).
 This modification improves the ability to capture long-term dependencies in the generated audio, enhancing the model's overall performance and synthesis quality.
 In the upsampling block, the [snake activation function [23]](../../Modules/Activation/Snake.md) helps the model learn the periodic structure of speech signals more accurately.
 Although the final output of the generator is the magnitude and phase of the spectrogram rather than the waveform, these components also exhibit periodic characteristics, making them suitable for modeling periodic structures.
@@ -246,7 +246,7 @@ Through these improvements, ***RingFormer*** achieves more precise speech synthe
 这一方法和 HiFi-GAN 的上采样过程中使用了 [×8, ×8, ×2, ×2] 转置卷积的多感受域融合 (MRF) 技术不同.
 我们的结构简化了上采样过程, 采用两段和环注意力相结合的 Conformer 块, 和 ×4 上采样, 提供了生成高质量音频的更高效和简洁的方法.
 
-剩余的 Conformer 块, 除去环注意力外, 与 [Ring Attention [18]](../../Modules/Attention/RingAttention.md) 中的相同.
+剩余的 Conformer 块, 除去环注意力外, 与 [Ring Attention [18]](../../Modules/Attention/2023.10.03_RingAttention.md) 中的相同.
 这一修改提高了生成音频的捕获长期依赖能力, 增强了模型整体性能和合成质量.
 在上采样块中, [蛇形激活函数 [23]](../../Modules/Activation/Snake.md) 帮助模型更精确地学习语音信号的周期结构.
 
@@ -265,7 +265,7 @@ Through these improvements, ***RingFormer*** achieves more precise speech synthe
 
 Capturing long-term dependencies is crucial for modeling realistic speech audio.
 For instance, the duration of a phoneme can exceed 100ms, resulting in a high correlation between more than 2,200 adjacent samples in the raw waveform.
-[Ring attention [18]](../../Modules/Attention/RingAttention.md) is a mechanism designed to efficiently process long sequences by leveraging block-wise parallel computation.
+[Ring attention [18]](../../Modules/Attention/2023.10.03_RingAttention.md) is a mechanism designed to efficiently process long sequences by leveraging block-wise parallel computation.
 In ***RingFormer***, ring attention is tailored for vocoders to effectively handle long sequences of speech signals.
 
 First, the mel-spectrogram upsampled from the MRF is divided into $N_d$ fixed-size blocks, and each block is assigned to an individual device.
@@ -294,7 +294,7 @@ As a result, ring attention maintains computational efficiency while achieving h
 捕获长期依赖性对于建模真实语音音频至关重要.
 例如, 一个音素的时长可以超过 100 毫秒, 导致原始波形中超过 2,200 个相邻样本存在高度相关性.
 
-[环注意力 [18]](../../Modules/Attention/RingAttention.md) 是一种机制, 旨在有效处理长序列, 通过利用块级并行计算来实现.
+[环注意力 [18]](../../Modules/Attention/2023.10.03_RingAttention.md) 是一种机制, 旨在有效处理长序列, 通过利用块级并行计算来实现.
 在 ***RingFormer*** 中, 环注意力为声码器进行专门处理, 以有效处理长序列的语音信号.
 
 首先, 从 MRF 上采样的梅尔频谱被划分为 $N_d$ 个固定大小的块, 并将每个块分配给单独的设备.
