--- a/Models/SpeechRepresentation/2025.01.02_MuQ.md
+++ b/Models/SpeechRepresentation/2025.01.02_MuQ.md
@@ -39,22 +39,22 @@ Code and checkpoints are open source in [this https URL](https://github.com/tenc
 ## 1·Introduction: 引言
 
 Self-supervised learning (SSL) has been introduced into speech and audio signal processing as a technique for learning latent semantic relationships from unlabeled raw data.
-Recently, several works \cite{li2023mert, won2023musicfm} apply SSL to music informatics understanding, and a number of pre-trained foundation models (PFMs) with generalized representation capabilities are built.
+Recently, several works ([MERT](2023.05.31_MERT.md), [MusicFM](2023.11.06_MusicFM.md)) apply SSL to music informatics understanding, and a number of pre-trained foundation models (PFMs) with generalized representation capabilities are built.
 Learning from unsupervised music data, these foundation models can achieve stunning performance in music understanding tasks such as genre classification, emotion prediction, and key detection \cite{yuan2023marble}, and further provide semantic representations for more downstream tasks like music generation \cite{agostinelli2023musiclm} and music captioning \cite{deng2024musilingo}, as illustrated in Figure \ref{fig:task_illu}.
 
 A key challenge in music understanding and representation is that music is an extremely specific modality.
 Unlike speech or environmental sounds, music not only focuses on semantic information, but also emphasizes acoustic information, such as melody, chords, and tonality.
-As a result, previous semantics-oriented SSL methods have struggled to perform well on music tasks\cite{spijkervet2021clmr, li2022mapmusic2vec, yuan2023marble}, as they fail to simultaneously capture both semantic and acoustic information.
+As a result, previous semantics-oriented SSL methods have struggled to perform well on music tasks\cite{[CLMR](2021.03.17_CLMR.md), li2022mapmusic2vec, yuan2023marble}, as they fail to simultaneously capture both semantic and acoustic information.
 
 Recently, several studies have sought to develop a universal music representation that integrates both semantic and acoustic aspects.
-Among these efforts, two remarkable models are MERT \cite{li2023mert} and MusicFM \cite{won2023musicfm}.
+Among these efforts, two remarkable models are [MERT](2023.05.31_MERT.md) and [MusicFM](2023.11.06_MusicFM.md).
 MERT employs a BERT-style masked language modeling (MLM) proxy task to predict discrete tokens from the masked audio parts, with an Encodec \cite{defossez2022encodec} model as the tokenizer and uses an auxiliary Constant Q-Transform (CQT) target to enhance the modeling of acoustic information.
 MusicFM, on the other hand, directly utilizes a random projection quantizer derived from BEST-RQ \cite{chiu2022bestrq}, and this tokenization approach provides a general target for learning music representation, without the need for additional CQT loss to capture acoustic modeling.
 
-As discussed in \cite{chiu2022bestrq} and \cite{li2023mert}, the target extractor (i.e., tokenizer) plays an important role in SSL, as models are trained to predict the tokenized pseudo-labels.
+As discussed in \cite{chiu2022bestrq} and [MERT](2023.05.31_MERT.md), the target extractor (i.e., tokenizer) plays an important role in SSL, as models are trained to predict the tokenized pseudo-labels.
 BEST-RQ features a lightweight approach that allows for fast extraction of discrete targets.
 However, its performance is highly dependent on the initialization of the random projection layer, often requiring multiple attempts or a specific random seed to achieve optimal results.
-In contrast, the Encodec target \cite{defossez2022encodec} used in MERT produces a series of residual targets, with the multi-target strategy shown beneficial to musical SSL \cite{li2023mert}.
+In contrast, the Encodec target \cite{defossez2022encodec} used in MERT produces a series of residual targets, with the multi-target strategy shown beneficial to musical SSL ([MERT](2023.05.31_MERT.md)).
 As a neural codec trained on audio data, Encodec produces more stable labels compared to its random counterparts.
 However, using Encodec as tokenization is computational heavy and consumes a lot of GPU memory when applying online extraction, which can reduce the training efficiency.
 Also, it needs to be coupled with additional CQT reconstruction loss to perform well in acoustic representation.
@@ -76,7 +76,7 @@ Our main contributions are listed as follows:
 MuQ-MuLan excels in aligning and jointly encoding music and text modalities, compared with the original MuLan model.
 
 Our experiments demonstrate that the Mel-RVQ significantly enhances SSL performance across a variety of music downstream tasks.
-Notably, MuQ outperforms previous state-of-the-art (SOTA) SSL models MERT and MusicFM, even when trained on just 0.9K hours of data, which is 100x less than what comparable models require \cite{li2023mert, won2023musicfm}.
+Notably, MuQ outperforms previous state-of-the-art (SOTA) SSL models MERT and MusicFM, even when trained on just 0.9K hours of data, which is 100x less than what comparable models require ([MERT](2023.05.31_MERT.md); [MusicFM](2023.11.06_MusicFM.md)).
 Additionally, our results show that MuQ-MuLan achieves a ROC-AUC score of 79.3 on the MagnaTagATune zero-shot music tagging task, surpassing the previous SOTA result\cite{huang2022mulan}.
 
 ## 2·Related Works: 相关工作
@@ -104,7 +104,7 @@ For example, automatic music tagging task require models to do multi-label class
 Other MIR tasks include key detection, pitch detection, emotion analysis, etc \cite{yuan2023marble}.
 
 In recent years, SSL has been introduced into music understanding for building universal representational models capable of handling various MIR tasks.
-Some of these efforts include CLMR \cite{spijkervet2021clmr} based on contrastive learning; MERT \cite{li2023mert} based on MLM proxy task; and more recently, MusicFM \cite{won2023musicfm}.
+Some of these efforts include [CLMR](2021.03.17_CLMR.md) based on contrastive learning; [MERT](2023.05.31_MERT.md) based on MLM proxy task; and more recently, [MusicFM](2023.11.06_MusicFM.md).
 These SSL-based models yield impressive performance across multiple MIR tasks, showing a generalized understanding of music.
 
 ### Music-Text Joint Embedding Model
@@ -247,7 +247,7 @@ The code is implemented with the Fairseq toolkit \cite{ott2019fairseq}.
 #### MuQ-MuLan
 
 We use the pre-trained MuQ as the initialization for the music encoder.
-A pre-trained multilingual RoBERTa model \texttt{xlm-roberta-base}
+A pre-trained multilingual RoBERTa model xlm-roberta-base
 % \footnote{\url{https://huggingface.co/FacebookAI/xlm-roberta-base}}
 is used for the text encoder followed by 8 layers of Transformer, with the embedding dimension $d=512$.
 MuQ-MuLan has 630M parameters in total, and all parameters stay unfrozen during the contrastive training.
@@ -426,8 +426,8 @@ We use the NSynth dataset \cite{Engel_2017_NSynth} for this task, then we use ac
 ### Performance of Pre-trained MuQ
 
 We compare MuQ with two popular models, MERT and MusicFM.
-For MERT, we use \texttt{MERT-v1-330M} version \cite{li2023mert}, the most superior of its releases on HuggingFace. % \footnote{\url{https://huggingface.co/m-a-p/MERT-v1-330M}}
-For MusicFM, we use the checkpoint pre-trained on the MSD dataset \cite{bertin2011msd}, which is publicly available by \cite{won2023musicfm}.
+For [MERT](2023.05.31_MERT.md), we use MERT-v1-330M version, the most superior of its releases on HuggingFace. % \footnote{\url{https://huggingface.co/m-a-p/MERT-v1-330M}}
+For MusicFM, we use the checkpoint pre-trained on the MSD dataset \cite{bertin2011msd}, which is publicly available by [MusicFM](2023.11.06_MusicFM.md).
 All models are of around 330M parameters.
 
 Table \ref{tab:marble_res1} and Table \ref{tab:marble_res2} present the results for three versions of MuQ.
@@ -468,7 +468,7 @@ We attribute this to the fact that the token produced by Encodec is a high abstr
 ### Performance of MuQ-MuLan
 
 In Table \ref{tab:mulan} , we compare MuQ-MuLan with LAION-CLAP \cite{laionclap2023}, Microsoft-CLAP 2023\cite{CLAP2023} and MuLan \cite{huang2022mulan}.
-We use the open-source \texttt{larger\_clap\_music\_and\_speech} version for LAION-CLAP, which is the best-performing checkpoint among its releases in our experiments.
+We use the open-source `larger_clap_music_and_speech` version for LAION-CLAP, which is the best-performing checkpoint among its releases in our experiments.
 We also introduce two variants that employ MERT or MusicFM as the music encoder and refer to them as MERT-MuLan and MusicFM-MuLan.
 
 Following previous study \cite{vasilakis2024canlisten}, we choose the proven superior MusCALL prompt: "A \textless label\textgreater \: track" for all models to test in our experiments.
