add MARS6 RelatedWork

--- a/Models/SpeechLM/2025.01.10_MARS6.md
+++ b/Models/SpeechLM/2025.01.10_MARS6.md
@@ -58,6 +58,20 @@ Demo, samples, code, and checkpoints: https://camb-ai.github.io/mars6-turbo/.
 
 ## 2·Related Works: 相关工作
 
+Within SLMs, there are broadly three ways to approach speech tokenization.
+The first is to tokenize speech using acoustic tokens at a fixed sample rate, as done in EnCodec and DAC~\cite{defossez2022highfi,kumar2024high}.
+The second is to mix acoustic and semantic tokens using two different quantizers~\cite{baade24_interspeech}, e.g., using clustered HuBERT features for semantic and EnCodec for acoustic tokens.
+The third, which we explore here, is that of hierarchical acoustic codecs, such as SNAC~\cite{Siuzdak_SNAC_Multi-Scale_Neural_2024}.
+These codecs quantize speech into acoustic tokens in different codebooks, each with its own sampling rate.
+This makes lower codebooks more 'coarse', and higher sample-rate codebooks 'fine'.
+The progenitor SLM TTS model, VALL-E, and its successors~\cite{wang2023neuralcodeclanguagemodels,chen2024valle2neuralcodec,han2024vallerrobustefficient},
+uses an autoregressive transformer to predict the most coarse acoustic codebook, and a non-autoregressive model to predict the remaining codebook values.
+
+Despite success, VALL-E and its descendants often suffer from stability issues.
+Several studies have tried to address this~\cite{song2024ellavstableneuralcodec,dang2024livespeech}, e.g., by adding linguistic and phonemic constraints to improve coherence between the output speech  and the given input text~\cite{wang2024hamttshierarchicalacousticmodeling}.
+But most of these improvements require phoneme alignments during training.
+The `bag-of-tricks' we introduce in this paper does not require such resources.
+
 ## 3·Methodology: 方法
 
 ## 4·Experiments: 实验
